change notification translation key  to exception ( should be compliant with hacs test )

--- a/custom_components/versatile_thermostat/translations/en.json
+++ b/custom_components/versatile_thermostat/translations/en.json
@@ -843,8 +843,9 @@
       }
     }
   },
-  "notification": {
-    "auto_tpi_learning_stopped_title": "Versatile Thermostat: Auto TPI Learning Stopped",
-    "auto_tpi_learning_stopped_message": "Auto TPI learning for {name} has been stopped due to 3 consecutive failures. Please check your configuration."
+  "exceptions": {
+    "auto_tpi_learning_stopped": {
+      "message": "Auto TPI learning for {name} has been stopped due to 3 consecutive failures. Reason: {reason}. Please check your configuration."
+    }
   }
 }
